<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<project default="build" name="Build CityGMLInjector" basedir=".">

	<property name="version" value="1.1.1" />
	<property name="javahome" value="C:\Program Files\Java\jdk-14.0.2\" />
	<property name="javafxhome" value="C:\Program Files\JavaFX\javafx-sdk-11.0.2\" />
	<property name="javafxmods" value="C:\Program Files\JavaFX\javafx-jmods-11.0.2\" />
	<property name="appName" value="citygml-injector" />
	<property name="src" location="src" />
	<property name="resources" location="resources" />
	<property name="buildFolder" location="dist" />
	<property name="moduleName" value="citygml.injector" />

	<target name="clean">
		<delete dir="${buildFolder}" />
		<mkdir dir="${buildFolder}" />
		<mkdir dir="${buildFolder}/modules" />
		<mkdir dir="${buildFolder}/modules/${moduleName}" />
	</target>

	<target name="copy-source">
		<copy todir="${buildFolder}/src">
			<fileset dir="${src}" />
		</copy>
	</target>

	<target name="generate-file-list">
	    <pathconvert property="src.files" pathsep="${line.separator}">
	        <fileset dir="${buildFolder}/src" />
	    </pathconvert>
	    <echo file="${buildFolder}/srclist.txt" message="${src.files}" />
	</target>

	<target name="compile">
		<exec executable="${javahome}\bin\javac" dir="${buildFolder}">
			<arg value="--module-path" />
			<arg value="${javafxhome}/lib" />
			<arg value="-d" />
			<arg value="modules/${moduleName}" />
			<arg value="@srclist.txt" />
		</exec>
	</target>
		
	<target name="image">
		<exec executable="${javahome}\bin\jlink" dir="${basedir}">
			<arg value="--module-path" />
			<arg value="${javafxmods};${buildFolder}/modules" />
			<arg value="--add-modules" />
			<arg value="${moduleName}" />
			<arg value="--launcher"/>
			<arg value="citygml-injector=${moduleName}/de.hft.stuttgart.citygmlinjector.client.Instance"/>		
			<arg value="--output" />
			<arg value="${buildFolder}/${appName}" />
		</exec>
	</target>
	
	<target name="copy-resources">
		<copy todir="${buildFolder}/${appName}/resources">
			<fileset dir="${resources}" />
		</copy>
	</target>
	
	<target name="create-bat">
		<echo file="${buildFolder}/${appName}/${appName}.bat">
			@echo off
			set JLINK_VM_OPTIONS=
			set DIR=%~dp0
			"%DIR%\bin\java" %JLINK_VM_OPTIONS% -m ${moduleName}/de.hft.stuttgart.citygmlinjector.client.Instance %*
		</echo>
	</target>
	
	<target name="cleanup">
		<delete file="${buildFolder}/${appName}/bin/citygml-injector.bat"/>
		<delete file="${buildFolder}/${appName}/bin/citygml-injector"/>
		<delete file="${buildFolder}/srclist.txt"/>
		<delete dir="${buildFolder}/src"/>
		<delete dir="${buildFolder}/modules"/>
	</target>

	<target name="build">
		<antcall target="clean"></antcall>
		<antcall target="copy-source"></antcall>
		<antcall target="generate-file-list"></antcall>
		<antcall target="compile"></antcall>
		<antcall target="image"></antcall>
		<antcall target="copy-resources"></antcall>
		<antcall target="create-bat"></antcall>
		<antcall target="cleanup"></antcall>
	</target>

</project>